--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,15 @@
 body {
-  background-color: #EFECCA;
-}
+  background-color: #f7f7df; }
+
+main {
+  background-image: url('http://macrinabakery.com/blog/wp-content/uploads/2012/12/TopPotLogoOpt.jpg');
+  opacity: 0.5;}
+
 h1 {
   font-family: 'Cabin Sketch', cursive;
   font-size: 400%;
-  color: #0B2A31;
-  border: 2px solid #005869;
+  color: #2c6c7a;
+  border: 2px solid #2c6c7a;
   border-radius: 10px;
   padding: 5px;}
 
@@ -18,7 +22,8 @@ h1 {
 
 p {
  font-family: 'Droid Sans', sans-serif;
-  letter-spacing: .02em}
+ color: #2c6c7a;
+ letter-spacing: .02em;}
 
 strong {
   font-weight: black;
@@ -38,23 +43,25 @@ form {
   width: 150px; }
 
 #input-button {
-  background-color: #AAD5D0;
+  background-color: #23E2CB;
   font-family: 'Cabin', sans-serif;
   border-radius: 100px;
-  width: 45px;
-  height: 45px; }
+  width: 40px;
+  height: 40px; }
 
 #input-button:hover {
   background-color: white;
   background-image: url(donut.png);
-  color: rgba(255, 255, 255, 0);}
+  color: rgba(255, 255, 255, 0);
+  border: 0;}
 
 
 table {
   font-family: 'Cabin', sans-serif;
   font-size: 125%;
   margin-right: auto;
-  margin-left: auto; }
+  margin-left: auto;
+  color: #2c6c7a;}
 
 table:hover {
   background-color: #23E2CB; }
@@ -63,10 +70,14 @@ tr:nth-child(odd) {
   background-color: #AAD5D0; }
 
 tr:nth-child(even) {
-  background-color: #F0EBE7; }
+  background-color: #dddddd; }
 
 tr:hover {
   background-color: white; }
+
+th > td{
+  width:60px:;
+}
 
 
 
