--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,6 @@
 body {
   background-color: #f7f7df; }
 
-main {
-  background-image: url('http://macrinabakery.com/blog/wp-content/uploads/2012/12/TopPotLogoOpt.jpg');
-  opacity: 0.5;}
-
 h1 {
   font-family: 'Cabin Sketch', cursive;
   font-size: 400%;
@@ -27,8 +23,7 @@ p {
 
 strong {
   font-weight: black;
-  font-size: 100%;
-}
+  font-size: 100%;}
 
 .info {
   text-align: center;}
@@ -75,9 +70,6 @@ tr:nth-child(even) {
 tr:hover {
   background-color: white; }
 
-th > td{
-  width:60px:;
-}
 
 
 
