--- a/styles.css
+++ b/styles.css
@@ -37,14 +37,14 @@ form {
 #shop-name {
   width: 150px; }
 
-#input-button {
+input[type='submit'] {
   background-color: #23E2CB;
   font-family: 'Cabin', sans-serif;
   border-radius: 100px;
   width: 40px;
   height: 40px; }
 
-#input-button:hover {
+input[type='submit']:hover  {
   background-color: #f7f7df;
   background-image: url(donut.png);
   color: rgba(255, 255, 255, 0);
