--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,93 @@
-body {
-  background-color: #f7f7df; }
+body{
+  overflow: auto;
+}
+
+.background {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  z-index: -1;
+}
+
+.background img {
+  position: absolute;
+  opacity: .8;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  min-height: 50%;
+  min-width: 50%; }
+
+aside > button {
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  background-color: #FF7F66;
+  font-size: 100%;
+  width: 120px;
+  height: 120px;
+  border-radius: 100px;
+  -ms-transform: rotate(-15deg);
+  -webkit-transform:rotate(-15deg);
+  transform: rotate (-15deg);}
+
+a {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  text-decoration: none;
+  color: white; }
+
+aside > button:hover {
+
+}
+
+main {
+  position:relative;
+  top: 10px;
+  margin: 0 auto;
+  background-color: rgba(238, 239, 247, .6);
+  width: 95%;
+  padding-bottom: 10px;
+  border-color: rgba(255, 255, 255, .5);
+  border-radius: 10px;
+   }
 
 h1 {
-  font-family: 'Cabin Sketch', cursive;
+  font-family: 'Francois One', sans-serif;
   font-size: 400%;
-  color: #2c6c7a;
+  color: #193441;
   border: 2px solid #2c6c7a;
   border-radius: 10px;
   padding: 5px;}
 
 .header {
-  background-color: #23E2CB;
-  width: 800px;
+  position: relative;
+  top: 10px;
+  background-color: #92CDCF;
+  width: 75%;
   margin-left: auto;
   margin-right: auto;
   border-radius: 10px; }
 
-p {
- font-family: 'Droid Sans', sans-serif;
- color: #2c6c7a;
- letter-spacing: .02em;}
-
-strong {
-  font-weight: black;
-  font-size: 100%;}
-
-.info {
-  text-align: center;}
-
-form {
-  text-align: center; }
-
-.form-data {
-  width: 50px; }
-
-#shop-name {
-  width: 150px; }
-
-input[type='submit'] {
-  background-color: #23E2CB;
-  font-family: 'Cabin', sans-serif;
-  border-radius: 100px;
-  width: 40px;
-  height: 40px; }
-
-input[type='submit']:hover  {
-  background-color: #f7f7df;
-  background-image: url(donut.png);
-  color: rgba(255, 255, 255, 0);
-  border: 0;}
-
-
 table {
-  font-family: 'Cabin', sans-serif;
+  position:relative;
+  font-family: 'Roboto', sans-serif;
   font-size: 125%;
   margin-right: auto;
   margin-left: auto;
-  color: #2c6c7a;}
+  width: 90%;
+  color: #193441;
+  overflow: scroll;}
 
 table:hover {
-  background-color: #23E2CB; }
+  background-color: #04756F; }
+
+table:hover th {
+  color: white; }
 
 tr:nth-child(odd) {
   background-color: #AAD5D0; }
@@ -68,8 +96,71 @@ tr:nth-child(even) {
   background-color: #dddddd; }
 
 tr:hover {
-  background-color: white; }
+  background-color: white;
+  font-weight: 900; }
+
+form{
+  background-color: rgba(238, 239, 247, .7);
+  border-radius: 10px;
+  width: 95%;
+  margin: 0 auto;
+  text-align: center;
+  padding-bottom: 5px; }
+
+th {
+  width: 50px;
+  font-size: 95%;
+  font-weight: 900; }
+
+.form-data {
+  width: 50px;
+  font-size: 120% }
+
+#shop-name {
+  width: 150px; }
+
+input[type='submit'] {
+  background-color: #92CDCF;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  border-radius: 100px;
+  width: 40px;
+  height: 40px; }
+
+input[type='submit']:hover  {
+  background-color: rgba(255, 255, 255, 0);
+  background-image: url(donut.png);
+  color: rgba(255, 255, 255, 0);
+  border: 0;}
+
+h2 {
+  font-family: 'Roboto', sans-serif;
+  color: #193441;
+  font-weight: black;
+  padding-top: 0; }
+
+p {
+ font-family: 'Roboto', sans-serif;
+ font-size: 110%;
+ font-weight: 900;
+ color: #193441;
+ letter-spacing: .01em;}
+
+.info {
+  text-align: center;
+  font-size: 100%;  }
 
 
-
-
+footer {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  font-size: 125%;
+  color: #193441;
+  background-color: white;
+  text-align: center;
+  padding-bottom: 5px;
+}
