--- a/styles.css
+++ b/styles.css
@@ -120,13 +120,19 @@ input[type='submit'] {
   font-weight: 900;
   border-radius: 100px;
   width: 40px;
-  height: 40px; }
+  height: 40px;
+  -webkit-transition: -webkit-transform 0.4s ease-out;
+  -moz-transition: -moz-transform 0.4s ease-out;
+  transition: transform 0.4s ease-out; }
 
 input[type='submit']:hover  {
   background-color: rgba(255, 255, 255, 0);
   background-image: url(donut.png);
   color: rgba(255, 255, 255, 0);
-  border: 0;}
+  border: 0;
+  -webkit-transform: rotateZ(360deg);
+  -moz-transform: rotateZ(360deg);
+  transform: rotateZ(360deg);}
 
 h2 {
   font-family: 'Roboto', sans-serif;
